removed support of APS 1.x (#21), fix version of the entire project to 2.0.0, updated with worked email account for tests samples