@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.alfresco.activiti</groupId>
 		<artifactId>aps-project</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
 	<dependencyManagement>
@@ -191,174 +191,7 @@
 				</dependency>
 			</dependencies>
 		</profile>
-		<profile>
-			<id>aps1.11.4</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>aps1.11.0</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>aps1.10.0</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>aps1.9.0.5</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
+		
 	</profiles>
 
 	<build>
